# my_uv_project

./: .env.example  README.md  TUTORIAL.md  main.py  pyproject.toml  requirements.txt
