[project]
name = "my-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "openmatrix>=0.3.5.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "tlpytools @ git+https://github.com/TransLinkForecasting/tlpytools.git@hotfix_sqlserver",
]
